# Expenditure-Manager

./: README.md  add_service.html  database.db  fun.html  index.html  layout.html  login.html  main.py  pyproject.toml  receipt-analyzer.html  receipt_output.html  receipts.csv  register.html  requirements.txt  secrets.env
