[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
description="flask template"
[tool.poetry.dependencies]
flask = "==1.0.2"
python = "^3.8"
flask-session = "^0.3.2"
werkzeug = "^1.0.1"
flatten-json = "^0.1.8"
python-dotenv = "^0.15.0"
nexmo = "^2.5.2"
pandas = "^1.2.0"
